...
        <scene sceneID="19R-uC-jfG">
            <objects>
                <viewController storyboardIdentifier="sbSettings" title="Settings" useStoryboardIdentifierAsRestorationIdentifier="YES" id="F0w-DN-10k" customClass="Settings" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="TCN-et-hrD"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="1234567" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ISQ-Fy-HkV">
                                <rect key="frame" x="129" y="86" width="230" height="29"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="MM/YYYY or LIFE" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="10o-7j-bnt">
                                <rect key="frame" x="129" y="122" width="230" height="31"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
        <scene sceneID="oGu-3h-Xmq">
            <objects>
                <tableViewController storyboardIdentifier="sbManageDivision" title="Manage Divisions" useStoryboardIdentifierAsRestorationIdentifier="YES" id="eh7-i0-ljg" customClass="ManageDivisionTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="InQ-zL-xPq">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
        <scene sceneID="hud-XQ-ocd">
            <objects>
                <tableViewController title="Manage Course of Fire" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Xha-9N-RLg" customClass="ManageCOFTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9pf-hn-M28">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
        <scene sceneID="HTr-np-kjo">
            <objects>
                <tableViewController storyboardIdentifier="sbMatchList" title="Match Lists" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KVh-YW-wV6" userLabel="Match Lists" customClass="LIST_Matches" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Jlu-ZO-YJ2" userLabel="Match Lists">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
        <scene sceneID="1gl-UM-kbs">
            <objects>
                <tableViewController storyboardIdentifier="sbMatchListDetails" title="Course of Fire" useStoryboardIdentifierAsRestorationIdentifier="YES" id="a9W-MX-3hA" userLabel="Match Detail List" customClass="LIST_Match_COF" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="iqx-3e-vu6">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
